compiler-core/src/type_/snapshots/gleam_core__type___tests__javascript_only_function_with_javascript_external-2.snap
---
source: compiler-core/src/type_/tests.rs
expression: "@external(javascript, \"foo\", \"bar\")\npub fn javascript_only() -> Int\n\n@external(javascript, \"foo\", \"bar\")\npub fn uh_oh() -> Int {\n  javascript_only()\n}\n"
---
error: Unsupported target
  ┌─ /src/one/two.gleam:6:3
  │
6 │   javascript_only()
  │   ^^^^^^^^^^^^^^^

This function doesn't have an implementation for the Erlang target.

